language/move-lang/tests/move_check/translated_ir_tests/signer/move_to_reference_to_resource.exp
error: 

   ┌── tests/move_check/translated_ir_tests/signer/move_to_reference_to_resource.move:4:9 ───
   │
 4 │         move_to<R>(s, move r)
   │         ^^^^^^^^^^^^^^^^^^^^^ Invalid call of 'move_to'. Invalid argument for parameter '1'
   ·
 3 │     fun t0(s: &signer, r: &R) {
   │                           -- The type: '&0x8675309::M::R'
   ·
 4 │         move_to<R>(s, move r)
   │                 - Is not compatible with: '0x8675309::M::R'
   │

error: 

    ┌── tests/move_check/translated_ir_tests/signer/move_to_reference_to_resource.move:14:9 ───
    │
 14 │         move_to<R<bool>>(s, move r)
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of 'move_to'. Invalid argument for parameter '1'
    ·
 13 │     fun t0(s: &signer, r: &mut R<bool>) {
    │                           ------------ The type: '&mut 0x8675309::N::R<bool>'
    ·
 14 │         move_to<R<bool>>(s, move r)
    │                 ------- Is not compatible with: '0x8675309::N::R<bool>'
    │

